# n64-fishing

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  fishing.c  main.cpp  main.h  n64-fishing.c  n64-fishing.cpp  n64-fishing.mk
assets/: player-a1b2c3d4.json  player-e5f6g7h8.json  player-i9j0k1l2.json  player-m3n4o5p6.json  s1_assetlist.json
code/: GameSettings.cpp  GameSettingsInterface.cpp  World.cpp
code/animation/: PlayerAnimatable.cpp
code/input/: AIInputStrategy.cpp  PlayerInputStrategy.cpp  PlayerState.cpp  PlayerUpdateStrategy.cpp
code/scene/: Camera.cpp  Player.cpp  PlayerAi.cpp  Scene.cpp  playerAi.cpp  scene.cpp
code/settings/: GameSettings.cpp
collision/: collider.cpp  collider.h  colliderType.h  cylinder.cpp  cylinder.h  epa.cpp  gjk.cpp  gjk.h  scene.cpp  scene.h
debug/: debugDraw.cpp  debugDraw.h  overlay.cpp  overlay.h
include/: Config.h  GameSettings.h  GameSettingsInterface.h  World.h
include/animation/: PlayerAnimatable.h
include/input/: AIInputStrategy.h  InputComponentUpdate.h  InputComponentVariant.h  PlayerInputState.h  PlayerInputStrategy.h  PlayerUpdateStrategy.h
include/scene/: ActorFlags.h  Fish.h  Player.h  PlayerAi.h  PlayerColliders.h  PlayerConsts.h  Scene.h  scene.h
include/settings/: GameSettings.h
lib/: CLAUDE.md  CMakeLists.txt
lib/include/: JsonParser.h  StringHash.h
lib/test/: CMakeLists.txt  JsonParserTest.cpp  StringHashTest.cpp
math/: box3d.h  vector2.h  vector3.cpp  vector3.h
scene/: camera.cpp  camera.h  fish.h  player.cpp  player.h  playerAi.cpp  playerAi.h  scene.cpp  scene.h
(+58 files in other folders)
